# GameEngine

./: .gitignore  CMakeLists.txt  build.bat
Shaders/: base.frag  base.frag.spv  base.vert  base.vert.spv  compile.bat
SourceFiles/Common/: CMakeLists.txt  EngineInfo.h
SourceFiles/Common/Core/: IConsole.h  ILogSystem.h
SourceFiles/Common/Engine/: Engine.h  Engine.inl  ICoreModule.h  IEngineModule.h
SourceFiles/Common/EventSystem/: Event.h  IEvent.h  IHandler.h
SourceFiles/Common/Graphics/Mesh/: Mesh.h
SourceFiles/Common/Graphics/Surface/: ISurface.h
SourceFiles/Core/: CMakeLists.txt  CoreModule.cpp  CoreModule.h  StdAfx.h
SourceFiles/Core/Console/: Console.cpp  Console.h
SourceFiles/Core/LogSystem/: LogSystem.cpp  LogSystem.h
SourceFiles/Core/MeshLoaders/AssimpLoader/: AssimpLoader.cpp  AssimpLoader.h
SourceFiles/GLFW/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  glfwModule.cpp  glfwModule.h
SourceFiles/Graphics/: CMakeLists.txt
SourceFiles/Graphics/Buffer/: IBuffer.h
SourceFiles/Graphics/Loader/: ILoader.h
SourceFiles/Graphics/Material/: Material.cpp
SourceFiles/Graphics/Mesh/: Mesh.h
SourceFiles/Launcher/: CMakeLists.txt  main.cpp
SourceFiles/RenderOpengl/: CMakeLists.txt  RendererOpenglModule.cpp  RendererOpenglModule.h  StdAfx.cpp  StdAfx.h
SourceFiles/RenderOpengl/Renderer/: RendererOpengl.cpp  RendererOpengl.h
SourceFiles/RenderVulkan/: CMakeLists.txt  RendererVulkanModule.cpp  RendererVulkanModule.h  StdAfx.h
SourceFiles/RenderVulkan/Buffer/: Buffer.cpp  Buffer.h
SourceFiles/RenderVulkan/Device/: Device.cpp  Device.h
SourceFiles/RenderVulkan/Renderer/: RendererVulkan.cpp  RendererVulkan.h
SourceFiles/RenderVulkan/Swapchain/: Swapchain.cpp  Swapchain.h
SourceFiles/RenderVulkan/Toolkit/: Toolkit.cpp  Toolkit.h
SourceFiles/SDK/boost/Lib/: libboost_atomic-vc142-mt-gd-x64-1_72.lib  libboost_atomic-vc142-mt-x64-1_72.lib  libboost_chrono-vc142-mt-gd-x64-1_72.lib  libboost_chrono-vc142-mt-x64-1_72.lib  libboost_container-vc142-mt-gd-x64-1_72.lib  libboost_container-vc142-mt-x64-1_72.lib  libboost_context-vc142-mt-gd-x64-1_72.lib  libboost_context-vc142-mt-x64-1_72.lib  libboost_contract-vc142-mt-gd-x64-1_72.lib  libboost_contract-vc142-mt-x64-1_72.lib  libboost_coroutine-vc142-mt-gd-x64-1_72.lib  libboost_coroutine-vc142-mt-x64-1_72.lib  libboost_date_time-vc142-mt-gd-x64-1_72.lib  libboost_date_time-vc142-mt-x64-1_72.lib  libboost_exception-vc142-mt-gd-x64-1_72.lib  libboost_exception-vc142-mt-x64-1_72.lib  libboost_fiber-vc142-mt-x64-1_72.lib  libboost_filesystem-vc142-mt-x64-1_72.lib  libboost_iostreams-vc142-mt-gd-x64-1_72.lib  libboost_iostreams-vc142-mt-x64-1_72.lib  libboost_math_c99-vc142-mt-x64-1_72.lib  libboost_math_c99f-vc142-mt-x64-1_72.lib  libboost_math_c99l-vc142-mt-x64-1_72.lib  libboost_prg_exec_monitor-vc142-mt-gd-x64-1_72.lib  libboost_prg_exec_monitor-vc142-mt-x64-1_72.lib  libboost_random-vc142-mt-gd-x64-1_72.lib  libboost_random-vc142-mt-x64-1_72.lib  libboost_stacktrace_noop-vc142-mt-gd-x64-1_72.lib  libboost_stacktrace_noop-vc142-mt-x64-1_72.lib  libboost_stacktrace_windbg-vc142-mt-gd-x64-1_72.lib  libboost_stacktrace_windbg-vc142-mt-x64-1_72.lib  libboost_stacktrace_windbg_cached-vc142-mt-gd-x64-1_72.lib  libboost_stacktrace_windbg_cached-vc142-mt-x64-1_72.lib  libboost_system-vc142-mt-gd-x64-1_72.lib  libboost_system-vc142-mt-x64-1_72.lib  libboost_thread-vc142-mt-gd-x64-1_72.lib  libboost_thread-vc142-mt-x64-1_72.lib  libboost_timer-vc142-mt-gd-x64-1_72.lib  libboost_timer-vc142-mt-x64-1_72.lib  libboost_type_erasure-vc142-mt-gd-x64-1_72.lib  (+1 more)
SourceFiles/SDK/boost/Lib32/: libboost_atomic-vc142-mt-gd-x32-1_72.lib  libboost_atomic-vc142-mt-x32-1_72.lib  libboost_chrono-vc142-mt-gd-x32-1_72.lib  libboost_chrono-vc142-mt-x32-1_72.lib  libboost_container-vc142-mt-gd-x32-1_72.lib  libboost_container-vc142-mt-x32-1_72.lib  libboost_context-vc142-mt-gd-x32-1_72.lib  libboost_context-vc142-mt-x32-1_72.lib  libboost_contract-vc142-mt-gd-x32-1_72.lib  libboost_contract-vc142-mt-x32-1_72.lib  libboost_coroutine-vc142-mt-gd-x32-1_72.lib  libboost_coroutine-vc142-mt-x32-1_72.lib  libboost_date_time-vc142-mt-gd-x32-1_72.lib  libboost_date_time-vc142-mt-x32-1_72.lib  libboost_exception-vc142-mt-gd-x32-1_72.lib  libboost_exception-vc142-mt-x32-1_72.lib  libboost_fiber-vc142-mt-x32-1_72.lib  libboost_filesystem-vc142-mt-x32-1_72.lib  libboost_iostreams-vc142-mt-gd-x32-1_72.lib  libboost_iostreams-vc142-mt-x32-1_72.lib  libboost_math_c99-vc142-mt-x32-1_72.lib  libboost_math_c99f-vc142-mt-gd-x32-1_72.lib  libboost_math_c99f-vc142-mt-x32-1_72.lib  libboost_math_c99l-vc142-mt-x32-1_72.lib  libboost_prg_exec_monitor-vc142-mt-gd-x32-1_72.lib  libboost_prg_exec_monitor-vc142-mt-x32-1_72.lib  libboost_random-vc142-mt-gd-x32-1_72.lib  libboost_random-vc142-mt-x32-1_72.lib  libboost_stacktrace_noop-vc142-mt-gd-x32-1_72.lib  libboost_stacktrace_noop-vc142-mt-x32-1_72.lib  libboost_stacktrace_windbg-vc142-mt-gd-x32-1_72.lib  libboost_stacktrace_windbg-vc142-mt-x32-1_72.lib  libboost_stacktrace_windbg_cached-vc142-mt-gd-x32-1_72.lib  libboost_stacktrace_windbg_cached-vc142-mt-x32-1_72.lib  libboost_system-vc142-mt-gd-x32-1_72.lib  libboost_system-vc142-mt-x32-1_72.lib  libboost_thread-vc142-mt-gd-x32-1_72.lib  libboost_thread-vc142-mt-x32-1_72.lib  libboost_timer-vc142-mt-gd-x32-1_72.lib  libboost_timer-vc142-mt-x32-1_72.lib  (+2 more)
SourceFiles/SDK/glwf/Lib/: glfw3.lib
SourceFiles/SDK/rlutil/Include/: rlutil.h
