cmake_minimum_required(VERSION 3.8)

project(Engine.Common)

set(CMAKE_CXX_STANDARD 17)

set(COMMON_GRAPHICS_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/Graphics/Mesh/Mesh.h
	${CMAKE_CURRENT_SOURCE_DIR}/Graphics/Mesh/Mesh.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Graphics/Surface/ISurface.h
)

set(COMMON_ENGINE_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/Engine/Engine.h
	${CMAKE_CURRENT_SOURCE_DIR}/Engine/Engine.inl
	${CMAKE_CURRENT_SOURCE_DIR}/Engine/IEngineModule.h
	${CMAKE_CURRENT_SOURCE_DIR}/Engine/ICoreModule.h
)

set(COMMON_CORE_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/Core/ILogSystem.h
	${CMAKE_CURRENT_SOURCE_DIR}/Core/IConsole.h
)

set(COMMON_EVENT_SYSTEM_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/EventSystem/IEvent.h
	${CMAKE_CURRENT_SOURCE_DIR}/EventSystem/IHandler.h
	${CMAKE_CURRENT_SOURCE_DIR}/EventSystem/Event.h
)

set(COMMON_ENGINE_INFO_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/EngineInfo.h
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES 
	${COMMON_GRAPHICS_SOURCES}
	${COMMON_ENGINE_SOURCES}
	${COMMON_CORE_SOURCES}
	${COMMON_EVENT_SYSTEM_SOURCES}
	${COMMON_ENGINE_INFO_SOURCES}
)

add_library(${PROJECT_NAME} SHARED
	${COMMON_GRAPHICS_SOURCES}
	${COMMON_ENGINE_SOURCES}
	${COMMON_CORE_SOURCES}
	${COMMON_EVENT_SYSTEM_SOURCES}
	${COMMON_ENGINE_INFO_SOURCES}
)

target_include_directories(${PROJECT_NAME} PUBLIC 
	${PROJECT_SOURCE_DIR}
	${ENGINE_ROOT}/SourceFiles/SDK/glm/Include 
	${ENGINE_ROOT}/SourceFiles/SDK/stb/Include 
	${ENGINE_ROOT}/SourceFiles/SDK/boost/Include 
)

if ("${CMAKE_GENERATOR_PLATFORM}" STREQUAL "x64")
    target_link_directories(${PROJECT_NAME} PUBLIC ${ENGINE_ROOT}/SourceFiles/SDK/boost/Lib)
elseif ("${CMAKE_GENERATOR_PLATFORM}" STREQUAL "x32")
	target_link_directories(${PROJECT_NAME} PUBLIC ${ENGINE_ROOT}/SourceFiles/SDK/boost/Lib32)
endif()